--- a/lab3/src/app/list/list.component.scss
+++ b/lab3/src/app/list/list.component.scss
@@ -1,12 +1,17 @@
+span{
+    background-color: red;
+    margin-left: 5px;
+}
+h2,h3,ul{
+    margin-left: 20px;
+}
+h3{
+    margin-top: 20px;
+}
 ul{
+    margin-top: 20px;
     list-style: none;
 }
 li{
-    padding: 5px;
-}
-span{
-    color:white;
-    background-color: red;
-    padding: 2px;
-    margin-left: 5px;
+    margin: 5px;
 }
